@@ -1,6 +1,7 @@
 0.3.0+ (in development)
 ------------------------------------------------------------------------
 - Fix: [#12691] Ride graph tooltip incorrectly used count instead of number string.
+- Fix: [#12694] Crash when switching ride types with construction window open.
 
 0.3.0 (2020-08-15)
 ------------------------------------------------------------------------
